# PokewalkerClient

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup_adapter.sh
.github/workflows/: docker.yml
pokewalker_client/: __init__.py  cli.py  commands.py  eeprom.py  gifts.py  images.py  items.py  protocol.py  serial_port.py  shellcode.py  species.py  sprites.py  structures.py  tui.py
tests/: __init__.py  test_images.py  test_protocol.py  test_structures.py
